<resources>
    <string name="app_name">BleMeterKai</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="login_name">Login name</string>
    <string name="password">Password</string>
    <string name="authenticate">Authenticate</string>
    <string name="building_name">建物名</string>
    <string name="room_name">部屋名</string>
    <string name="datetime">日時</string>
    <string name="datetime_meter">計器日時</string>
    <string name="import_w">15分使用量[kW]</string>
    <string name="account_fragment_label">Certification</string>
    <string name="first_fragment_label">建物名</string>
    <string name="second_fragment_label">F5LWF lists</string>
    <string name="third_fragment_label">---</string>
    <string name="fourth_fragment_label">---</string>
    <string name="third1_fragment_label">開閉器確認</string>
    <string name="third2_fragment_label">初期設定、検針</string>
    <string name="third3_fragment_label">確定</string>
    <string name="previous">Back</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="menu_select">選択</string>
    <string name="menu_scan">スキャン</string>
    <string name="menu_disconnect">切断</string>
    <string name="menu_share">E-mail</string>
    <string name="menu_save">Save</string>
    <string name="menu_load">Read</string>
    <string name="menu_batch">Batch Reading</string>
    <string name="menu_user">User setting</string>
    <string name="menu_password">Password setting</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_exit">Exit</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="serial_no">計器ID</string>
    <string name="model">型式</string>
    <string name="spec_voltage">定格電圧</string>
    <string name="spec_current">定格電流</string>
    <string name="clock">計器時計</string>
    <string name="energy_value">電力量</string>
    <string name="power_value">瞬時電力</string>
    <string name="current">電流</string>
    <string name="voltage">電圧</string>
    <string name="get">取得</string>
    <string name="auto_read">検針</string>
    <string name="registration">Registration</string>
    <string name="manual_read">面前検針</string>
    <string name="min_voltage">最小電圧</string>
    <string name="max_demand">最大デマンド</string>
    <string name="previous_energy">前回電力量</string>
    <string name="current_energy">今回電力量</string>
    <string name="fixed_energy">確定電力量</string>
    <string name="alert">アラート</string>
    <string name="alert_clear">アラート解除</string>
    <string name="battery">電池残量</string>
    <string name="confirm_date">検針日時</string>
    <string name="exit">Exit</string>
    <string name="go">開始</string>
    <string name="timer">タイマー設定</string>
    <string name="start">測定開始</string>
    <string name="from_value">開始値</string>
    <string name="to_value">終了値</string>
    <string name="increase">増加分</string>
    <string name="load">負荷容量</string>
    <string name="check_datetime">確認日時</string>
    <string name="meantime">測定時間</string>
    <string name="current_read">Read data</string>
    <string name="setting_check">施工確認</string>
    <string name="elapsed_time">経過時間</string>
    <string name="print">Print</string>
    <string name="event_record">Event log</string>
    <string name="load_record">Load profile</string>
    <string name="billing_data">Billing data</string>
    <string name="energy_record">Import energy</string>
    <string name="min">分</string>
    <string name="sec">秒</string>
    <string name="table1_key">物件UID</string>
    <string name="table1_col1">物件ID</string>
    <string name="table1_col2">物件名称</string>
    <string name="table2_key">UID</string>
    <string name="table2_col1">Activate</string>
    <string name="table2_col2">Serial NO.</string>
    <string name="table2_col3">Bluetooth ID</string>
    <string name="table2_col4">Fixed date</string>
    <string name="table2_col5">Imp [kWh]</string>
    <string name="table2_col6">Exp [kWh]</string>
    <string name="table2_col7">ImpMaxDemand [kW]</string>
    <string name="table2_col8">ExpMaxDemand [kW]</string>
    <string name="table2_col9">MinVolt [V]</string>
    <string name="table2_col10">Alert</string>
    <string name="table2_col11">Read date</string>
    <string name="table3_key">Rate Type</string>
    <string name="table3_col1">Generation System Charge</string>
    <string name="table3_col2">Transmission Demand Charge</string>
    <string name="table3_col3">System Loss Charge</string>
    <string name="table3_col4">Distribution Demand Charge</string>
    <string name="table3_col5">Supply Fix Charge</string>
    <string name="table3_col6">Metering Fix Charge</string>
    <string name="table3_col7">Reinvestment Fund for CAPEX</string>
    <string name="table3_col8">Member CAPEX Contribution</string>
    <string name="table3_col9">Lifeline Discount Subsidy</string>
    <string name="table3_col10">Senior Citizen Subsidy</string>
    <string name="table3_col11">Missionary Elec(NPC-SPUG)</string>
    <string name="table3_col12">Missionary Elec(RED)</string>
    <string name="table3_col13">Environmetal Charge</string>
    <string name="table3_col14">Feed In Tariff Allowance</string>
    <string name="table3_col15">NPC Stranded Contract</string>
    <string name="table3_col16">NPC Stranded Debts</string>
    <string name="table3_col17">Generation VAT</string>
    <string name="table3_col18">Transmisson VAT</string>
    <string name="table3_col19">System Loss VAT</string>
    <string name="table3_col20">Distribution VAT</string>
    <string name="table3_col21">Other VAT</string>
    <string name="btn_breaker">開閉器</string>
    <string name="btn_register">登録</string>
    <string name="set_clock">Set Clock</string>
    <string name="change_threshold">Change Threshold</string>
    <string name="btn_checker">確認</string>
    <string name="bt_not_enabled_leaving" />
    <string name="login_error_message">Invalid username or password. Please try again.</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_upload">Upload</string>
    <string name="profile_picture_desc">Profile Picture</string>
    <string name="profile_name_label">Name:</string>
    <string name="profile_email_label">Email:</string>
    <string name="profile_role_label">Role:</string>
    <string name="profile_edit_button">Edit Profile</string>
    <string name="please_enter_username">Please enter a username.</string>
    <string name="please_enter_password">Please enter a password.</string>
    <string name="login_failed_check_credentials">Login failed. Please check your username and
        password.
    </string>
    <string name="logout">Logout</string>
    <string name="profile_logout_button">Logout</string>
    <string name="home_fragment_label">Home</string>
</resources>