<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fujielectricmeter.blemeter.MainActivity">
    <item android:id="@+id/menu_select"
        android:title="@string/menu_select"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_scan"
        android:title="@string/menu_scan"
        android:orderInCategory="101"
        app:showAsAction="never" />
    <item android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        android:orderInCategory="102"
        app:showAsAction="never" />
    <item android:id="@+id/menu_share"
        android:title="@string/menu_share"
        android:orderInCategory="103"
        app:showAsAction="never" />
    <item android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:orderInCategory="104"
        app:showAsAction="never" />
    <item android:id="@+id/menu_load"
        android:title="@string/menu_load"
        android:orderInCategory="105"
        app:showAsAction="never" />
    <item android:id="@+id/menu_user"
        android:title="@string/menu_user"
        android:orderInCategory="106"
        app:showAsAction="never" />
    <item android:id="@+id/menu_password"
        android:title="@string/menu_password"
        android:orderInCategory="107"
        app:showAsAction="never" />
    <item android:id="@+id/menu_batch"
        android:title="@string/menu_batch"
        android:orderInCategory="108"
        app:showAsAction="never" />
    <item android:id="@+id/menu_stop"
        android:title="@string/menu_stop"
        android:orderInCategory="108"
        app:showAsAction="never" />
    <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="109"
        app:showAsAction="never" />
</menu>